--- a/style.css
+++ b/style.css
@@ -58,7 +58,11 @@ section {
     width: 100vw;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
     color: var(--color-white);
     line-height: 1.3;
 }
@@ -153,7 +157,7 @@ nav button {
 }
 
 /* show nav ul when nav profile is hovered */
-.nav__profile:hover > ul {
+.nav__profile:hover>ul {
     visibility: visible;
     opacity: 1;
 }
@@ -255,6 +259,7 @@ nav button {
     gap: 1rem;
 }
 
+
 /* FOOTER */
 footer {
     background: var(--color-gray-900);
@@ -318,8 +323,79 @@ footer ul a:hover {
 }
 
 
+/* SEARCH */
+.search__bar {
+    margin-top: 7rem;
+}
+
+.search__bar-container {
+    position: relative;
+    width: 30rem;
+    background: var(--color-gray-900);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    overflow: hidden;
+    padding: 0.6rem 1rem;
+    border-radius: var(--card-border-radius-2);
+    color: var(--color-gray-300);
+}
+
+.search__bar-container>div {
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.search__bar input {
+    background: transparent;
+    margin-left: 0.7rem;
+    padding: 0.5rem 0;
+    width: 100%;
+}
+
+.search__bar input::placeholder {
+    color: var(--color-gray-300);
+}
+
+
+/* BUTTON */
+.btn {
+    display: inline-block;
+    width: fit-content;
+    padding: 0.6rem 1.2rem;
+    background-color: var(--color-primary);
+    border-radius: var(--card-border-radius-2);
+    cursor: pointer;
+    transition: var(--transition);
+    color: var(--color-white);
+}
+
+
+/* SINGLE POST */
+.singlepost {
+    margin: 6rem 0 2rem;
+}
+
+.singlepost__container {
+    width: var(--form-width);
+    background: var(--color-gray-900);
+    padding: 1rem 2rem 3rem;
+}
+
+.singlepost__thumbnail {
+    margin: 1.5rem 0 1rem;
+}
+
+.singlepost__container p {
+    margin-top: 1rem;
+    line-height: 1.7;
+}
+
+
 /* MEDIA QUERIES (MEDIUM DEVICES) */
 @media screen and (max-width: 1024px) {
+
     /* GENERAL */
     .container {
         width: var(--container-width-md);
@@ -373,6 +449,37 @@ footer ul a:hover {
         align-items: center;
         box-shadow: -2rem 3rem 7rem rgba(0, 0, 0, 0.7);
         border-top: 1px solid var(--color-bg);
+        animation: animateDropdown 400ms 0s ease forwards;
+        opacity: 0;
+        transform-origin: top;
+    }
+
+    .nav__items li:nth-child(2) {
+        animation-delay: 200ms;
+    }
+
+    .nav__items li:nth-child(3) {
+        animation-delay: 400ms;
+    }
+
+    .nav__items li:nth-child(4) {
+        animation-delay: 600ms;
+    }
+
+    .nav__items li:nth-child(5) {
+        animation-delay: 800ms;
+    }
+
+    /* NAV DROPDOWN ANIMATION */
+    @keyframes animateDropdown {
+        0% {
+            transform: rotateX(90deg);
+        }
+
+        100% {
+            transform: rotateX(0deg);
+            opacity: 1;
+        }
     }
 
     .nav__items li a {
@@ -397,5 +504,73 @@ footer ul a:hover {
     .nav__profile .avatar {
         margin-left: 2rem;
         border: 0;
+    }
+
+    .featured__container {
+        gap: 3rem;
+    }
+
+    .posts__container {
+        grid-template-columns: 1fr 1fr;
+        gap: 3rem;
+    }
+
+    .footer__container {
+        grid-template-columns: 1fr 1fr;
+        gap: 3rem;
+    }
+
+
+    /* BLOG */
+    .search__bar-container {
+        width: 60%;
+    }
+}
+
+
+/* MEDIA QUERIES (SMALL DEVICES) */
+@media screen and (max-width: 600px) {
+    section {
+        margin-top: 2rem;
+    }
+
+    h1 {
+        font-size: 2rem;
+    }
+
+    .featured {
+        margin-top: 6rem;
+    }
+
+    .featured__container {
+        grid-template-columns: 1fr;
+        gap: 0;
+    }
+
+    .posts__container {
+        grid-template-columns: 1fr;
+    }
+
+    .category__buttons-container {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .footer__container {
+        grid-template-columns: 1fr;
+        text-align: center;
+        gap: 2rem;
+    }
+
+
+    /* BLOG */
+    .search__bar-container {
+        width: var(--container-width-md);
+    }
+
+
+    /* SINGLE POST */
+    .singlepost__container {
+        background-color: transparent;
+        padding: 0;
     }
 }
