--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@
     appearance: 0;
     list-style: none;
     text-decoration: none;
+    box-sizing: border-box;
 }
 
 body {
@@ -393,6 +394,86 @@ footer ul a:hover {
 }
 
 
+/* CATEGORY POSTS */
+.category__title {
+    height: 15rem;
+    margin-top: 4.5rem;
+    background: var(--color-gray-900);
+    display: grid;
+    place-items: center;
+}
+
+
+/* EMPTY PAGES */
+.empty__page {
+    height: 70vh;
+    display: grid;
+    place-content: center;
+}
+
+
+/* GENERAL FORM */
+.form__section {
+    display: grid;
+    place-items: center;
+    height: 100vh;
+}
+
+.form__section-container {
+    width: var(--form-width);
+}
+
+.alert__message {
+    padding: 0.8rem 1.4rem;
+    margin-bottom: 1rem;
+    border-radius: var(--card-border-radius-2);
+}
+
+.alert__message.error {
+    background: var(--color-red-light);
+    color: var(--color-red);
+}
+
+.alert__message.success {
+    background: var(--color-green-light);
+    color: var(--color-green);
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.form__control {
+    display: flex;
+    flex-direction: column;
+    gap: 0.6rem;
+}
+
+.form__control.inline {
+    flex-direction: row;
+    align-items: center;
+}
+
+input, textarea, select {
+    padding: 0.8rem 1.4rem;
+    background-color: var(--color-gray-900);
+    border-radius: var(--card-border-radius-2);
+    resize: 2;
+    color: var(--color-white);
+}
+
+.form__section small {
+    margin-top: 1rem;
+    display: block;
+}
+
+.form__section small a {
+    color: var(--color-primary);
+}
+
+
 /* MEDIA QUERIES (MEDIUM DEVICES) */
 @media screen and (max-width: 1024px) {
 
@@ -525,6 +606,12 @@ footer ul a:hover {
     .search__bar-container {
         width: 60%;
     }
+
+
+    /* GENERAL FORM */
+    .form__section-container {
+        padding: 3rem;
+    }
 }
 
 
@@ -571,6 +658,12 @@ footer ul a:hover {
     /* SINGLE POST */
     .singlepost__container {
         background-color: transparent;
+        padding: 0;
+    }
+
+
+    /* GENERAL FORM */
+    .form__section-container {
         padding: 0;
     }
 }
